--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 
 <script>
  // Configuração do Firebase do seu aplicativo da web
-  var firebaseConfig = {
-    apiKey: "AIzaSyCKu8c7vewohdOJgBAIEpmAaZ13e6aNcSg",
-    authDomain: "p35balloon.firebaseapp.com",
-    projectId: "p35balloon",
-    storageBucket: "p35balloon.appspot.com",
-    messagingSenderId: "354739504889",
-    appId: "1:354739504889:web:53955ece12c9284bb84428"
-  };
+ var firebaseConfig = {
+  apiKey: "AIzaSyBta1qLeCnGBkfVbycrMDWjS_-HEt_N-qs",
+  authDomain: "balao-a5a41.firebaseapp.com",
+  databaseURL: "https://balao-a5a41-default-rtdb.firebaseio.com",
+  projectId: "balao-a5a41",
+  storageBucket: "balao-a5a41.appspot.com",
+  messagingSenderId: "1067185602899",
+  appId: "1:1067185602899:web:1fe32325edf113903ca1a6"
+};
   // Inicializar Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
